apps/cluster-based/shared/06-efk/efk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-system-logging
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: tanzu-system-logging
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.io/bitnami/elasticsearch:7.2.1
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: elasticsearch
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # storageClassName: do-block-storage
      resources:
        requests:
          storage: 40Gi
---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: tanzu-system-logging
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  type: LoadBalancer
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: tanzu-system-logging
  labels:
    app: kibana
spec:
  type: LoadBalancer
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-httpproxy
  namespace: tanzu-system-logging
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: elasticsearch
      port: 9200
  virtualhost:
    fqdn: elasticsearch.shared.h2o-4-1384.h2o.vmware.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: tanzu-system-logging
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.io/bitnami/kibana:7.2.1
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: kibana
  name: kibana-httpproxy
  namespace: tanzu-system-logging
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: kibana
      port: 5601
  virtualhost:
    fqdn: kibana.shared.h2o-4-1384.h2o.vmware.com
